Dark mode. Replaced usages of `btn-appear-*` and `btn-outline-* with `btn-ghost` Fixed battle only accepting choice if clicking on image.

--- a/resources/scss/_variables.scss
+++ b/resources/scss/_variables.scss
@@ -10,25 +10,25 @@ $font-size-base: math.div(15rem,16);
 @import "_tailwind-colours.scss";
 
 $white:    #fff;
-$gray-100: $slate-100;
-$gray-200: $slate-200;
-$gray-300: $slate-300;
-$gray-400: $slate-400;
-$gray-500: $slate-500;
-$gray-600: $slate-600;
-$gray-700: $slate-700;
-$gray-800: $slate-800;
-$gray-900: $slate-900;
+$gray-100: $tw-neutral-100;
+$gray-200: $tw-neutral-200;
+$gray-300: $tw-neutral-300;
+$gray-400: $tw-neutral-400;
+$gray-500: $tw-neutral-500;
+$gray-600: $tw-neutral-600;
+$gray-700: $tw-neutral-700;
+$gray-800: $tw-neutral-800;
+$gray-900: $tw-neutral-900;
 $black:    #000;
 
-$blue: $blue-500;
-$indigo: $indigo-500;
-$purple: $purple-500;
-$pink: $pink-500;
-$red: $red-500;
-$orange: $orange-500;
-$green: $green-500;
-$teal: $teal-500;
-$cyan: $cyan-500;
-$gray: $gray-600;
-$gray-dark: $gray-800;
+$blue: $tw-blue-500;
+$indigo: $tw-indigo-500;
+$purple: $tw-purple-500;
+$pink: $tw-pink-500;
+$red: $tw-rose-500;
+$orange: $tw-orange-500;
+$green: $tw-green-500;
+$teal: $tw-teal-500;
+$cyan: $tw-cyan-500;
+$gray: $tw-gray-600;
+$gray-dark: $tw-gray-800;
